--- a/project-board/src/main/resources/templates/articles/index.html
+++ b/project-board/src/main/resources/templates/articles/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
 	<title>게시판 페이지</title>
@@ -8,9 +8,7 @@
 	
 	<!-- semantic tag 방식 -->
 	<!-- header 삽입부 -->
-	<header>
-		<hr>
-	</header>
+	<header th:replace="header :: header"></header>
 
 	<!-- 메인 페이지 - 테이블 -->
 	<main>
@@ -77,10 +75,7 @@
 		</nav>
 	</main>
 	<!-- footer 삽입부 -->
-	<footer>
-		<hr>
-
-	</footer>
+	<footer th:replace="footer :: footer" ></footer>
 	
 </body>
 </html>
