--- a/project-board/src/main/resources/templates/articles/detail.html
+++ b/project-board/src/main/resources/templates/articles/detail.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="">
+	<meta name="author" content="Himmel">
 	<title>게시글 페이지</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body>
 	
@@ -11,16 +16,25 @@
 	<header id="header"></header>
 
 	<!-- 메인 페이지 - 테이블 -->
-	<main>
-		<header>
+	<main class="container">
+		<header class="py-5 text-center">
 			<h1>첫번째 글</h1>
 		</header>
-		<aside>
-			<p>Himmel</p>
-			<p><a id="email" href="mailto:djkehh@gmail.com">uno@mail.com</a></p>
-			<p><time id="created-at" datetime="2022-01-01T00:00:00">2022-01-01</time></p>
-			<p>#java</p>
-		</aside>
+
+		<div class="row g-5">
+			<section class="col-md-5 col-lg-4 order-md-last">
+				<aside>
+					<p>Himmel</p>
+					<p><a id="email" href="mailto:djkehh@gmail.com">uno@mail.com</a></p>
+					<p><time id="created-at" datetime="2022-01-01T00:00:00">2022-01-01</time></p>
+					<p>#java</p>
+				</aside>
+			</section>
+
+			<article class="col-md-7 col-lg-8">
+				<p>본문<br><br></p>
+			</article>
+		</div>
 
 		<section>
 			<p>본문<br><br></p>
@@ -65,6 +79,9 @@
 	</main>
 	<!-- footer 삽입부 -->
 	<footer id="footer"></footer>
-	
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+		crossorigin="anonymous"></script>
 </body>
 </html>
