--- a/project-board/src/main/resources/templates/articles/index.html
+++ b/project-board/src/main/resources/templates/articles/index.html
@@ -93,18 +93,15 @@
 		</table>
 
 		<!-- 네비게이션 바 -->
-		<nav>
-			<table>
-				<tr>
-					<td>previous</td>
-					<td>1</td>
-					<td>2</td>
-					<td>3</td>
-					<td>4</td>
-					<td>next</td>
-				</tr>
-			</table>
-		</nav>
+		<nav aria-label="Page navigation example">
+			<ul class="pagination justify-content-center">
+			  <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+			  <li class="page-item"><a class="page-link" href="#">1</a></li>
+			  <li class="page-item"><a class="page-link" href="#">2</a></li>
+			  <li class="page-item"><a class="page-link" href="#">3</a></li>
+			  <li class="page-item"><a class="page-link" href="#">Next</a></li>
+			</ul>
+		  </nav>
 	</main>
 	<!-- footer 삽입부 -->
 	<footer id="footer">footer 삽입부</footer>
